// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-row css-dev-only-do-not-override-ph9edi"
  >
    <div
      class="ant-col ant-col-24 css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-carousel css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="slick-slider slick-initialized"
        >
          <div
            class="slick-list"
          >
            <div
              class="slick-track"
              style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
            >
              <div
                aria-hidden="false"
                class="slick-slide slick-active slick-current"
                data-index="0"
                style="outline: none; width: 0px;"
                tabindex="-1"
              >
                <div>
                  <div
                    class="movie-image"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  >
                    <img
                      alt=""
                      src="https://image.tmdb.org/t/p/originaltest/image"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="top-margin"
  >
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <span>
            test/title (2023)
          </span>
           
          <span
            aria-label="plus-circle"
            class="anticon anticon-plus-circle"
            data-testid="addMovieToListPopover"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="plus-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
              />
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
            </svg>
          </span>
           
          <span
            class="anticon"
            role="img"
            tabindex="-1"
          >
            <span
              aria-hidden="true"
              aria-label="heart"
              class="anticon anticon-heart"
              fill="currentColor"
              focusable="false"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                aria-hidden="true"
                data-icon="heart"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                />
              </svg>
            </span>
          </span>
           
          <span
            class="anticon"
            role="img"
            tabindex="-1"
          >
            <span
              aria-hidden="true"
              aria-label="book"
              class="anticon anticon-book"
              fill="currentColor"
              focusable="false"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                aria-hidden="true"
                data-icon="book"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zm-260 72h96v209.9L621.5 312 572 347.4V136zm220 752H232V136h280v296.9c0 3.3 1 6.6 3 9.3a15.9 15.9 0 0022.3 3.7l83.8-59.9 81.4 59.4c2.7 2 6 3.1 9.4 3.1 8.8 0 16-7.2 16-16V136h64v752z"
                />
              </svg>
            </span>
          </span>
        </h1>
        <h3
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          Overview
        </h3>
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          test/overview
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <b>
            Original Language: 
          </b>
          <span />
        </div>
      </div>
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <b>
            Runtime: 
          </b>
          <span>
            1h 30m
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <b>
            Budget: 
          </b>
          <span>
            $1,000,000.00
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <b>
            Revenue: 
          </b>
          <span>
            $1,500,000.00
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <b>
            Genres: 
          </b>
          <span
            class="ant-tag css-dev-only-do-not-override-ph9edi"
          >
            ACTION
          </span>
          <span
            class="ant-tag css-dev-only-do-not-override-ph9edi"
          >
            HORROR
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-col ant-col-10 ant-col-offset-2 top-margin css-dev-only-do-not-override-ph9edi"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          Casts
        </h3>
      </div>
    </div>
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-ph9edi"
      style="margin-left: -4px; margin-right: -4px;"
    >
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <div
          class="ant-row css-dev-only-do-not-override-ph9edi"
          style="margin-left: -16px; margin-right: -16px;"
        >
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-ph9edi"
            style="padding-left: 16px; padding-right: 16px;"
          >
            <div
              class="ant-card ant-card-bordered top-margin css-dev-only-do-not-override-ph9edi"
            >
              <div
                class="ant-card-cover"
              >
                <img
                  alt="Profile"
                  src="https://image.tmdb.org/t/p/w500test/image"
                />
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-card-meta"
                >
                  <div
                    class="ant-card-meta-detail"
                  >
                    <div
                      class="ant-card-meta-title"
                    >
                      John Doe
                    </div>
                    <div
                      class="ant-card-meta-description"
                    >
                      Neo
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-col ant-col-10 ant-col-offset-2 top-margin css-dev-only-do-not-override-ph9edi"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          Crew
        </h3>
      </div>
    </div>
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-ph9edi"
      style="margin-left: -4px; margin-right: -4px;"
    >
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <div
          class="ant-row css-dev-only-do-not-override-ph9edi"
          style="margin-left: -16px; margin-right: -16px;"
        >
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-ph9edi"
            style="padding-left: 16px; padding-right: 16px;"
          >
            <div
              class="ant-card ant-card-bordered top-margin css-dev-only-do-not-override-ph9edi"
            >
              <div
                class="ant-card-cover"
              >
                <img
                  alt="Profile"
                  src="https://image.tmdb.org/t/p/w500test/image"
                />
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-card-meta"
                >
                  <div
                    class="ant-card-meta-detail"
                  >
                    <div
                      class="ant-card-meta-title"
                    >
                      John Doe
                    </div>
                    <div
                      class="ant-card-meta-description"
                    >
                      Director
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Movie component matches snapshot with error 1`] = `
<DocumentFragment>
  <div
    class="top-margin"
  >
    <div
      class="ant-result ant-result-error css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-result-icon"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-result-title"
      >
        test/error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Movie component matches snapshot with loading 1`] = `
<DocumentFragment>
  <div
    class="top-margin"
  >
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-col css-dev-only-do-not-override-ph9edi"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning css-dev-only-do-not-override-ph9edi"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Movie component matches snapshot with other data 1`] = `
<DocumentFragment>
  <div
    class="ant-row css-dev-only-do-not-override-ph9edi"
  >
    <div
      class="ant-col ant-col-24 css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-carousel css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="slick-slider slick-initialized"
        >
          <div
            class="slick-list"
          >
            <div
              class="slick-track"
              style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
            >
              <div
                aria-hidden="false"
                class="slick-slide slick-active slick-current"
                data-index="0"
                style="outline: none; width: 0px;"
                tabindex="-1"
              >
                <div>
                  <div
                    class="movie-image"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  >
                    <img
                      alt=""
                      src="https://image.tmdb.org/t/p/originaltest/image"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="top-margin"
  >
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <span>
            test/title (2023)
          </span>
           
          <span
            aria-label="plus-circle"
            class="anticon anticon-plus-circle ant-popover-open"
            data-testid="addMovieToListPopover"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="plus-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
              />
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
            </svg>
          </span>
           
          <span
            class="anticon"
            role="img"
            tabindex="-1"
          >
            <span
              aria-hidden="true"
              aria-label="heart"
              class="anticon anticon-heart"
              fill="currentColor"
              focusable="false"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                aria-hidden="true"
                data-icon="heart"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9z"
                />
              </svg>
            </span>
          </span>
           
          <span
            class="anticon"
            role="img"
            tabindex="-1"
          >
            <span
              aria-hidden="true"
              aria-label="book"
              class="anticon anticon-book"
              fill="currentColor"
              focusable="false"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                aria-hidden="true"
                data-icon="book"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zM668 345.9L621.5 312 572 347.4V124h96v221.9z"
                />
              </svg>
            </span>
          </span>
        </h1>
        <h3
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          Overview
        </h3>
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          test/overview
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <b>
            Original Language: 
          </b>
          <span />
        </div>
      </div>
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <b>
            Runtime: 
          </b>
          <span>
            1h 30m
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <b>
            Budget: 
          </b>
          <span>
            $1,000,000.00
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <b>
            Revenue: 
          </b>
          <span>
            $1,500,000.00
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          <b>
            Genres: 
          </b>
          <span
            class="ant-tag css-dev-only-do-not-override-ph9edi"
          >
            ACTION
          </span>
          <span
            class="ant-tag css-dev-only-do-not-override-ph9edi"
          >
            HORROR
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-col ant-col-10 ant-col-offset-2 top-margin css-dev-only-do-not-override-ph9edi"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          Casts
        </h3>
      </div>
    </div>
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-ph9edi"
      style="margin-left: -4px; margin-right: -4px;"
    >
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <div
          class="ant-row css-dev-only-do-not-override-ph9edi"
          style="margin-left: -16px; margin-right: -16px;"
        >
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-ph9edi"
            style="padding-left: 16px; padding-right: 16px;"
          >
            <div
              class="ant-card ant-card-bordered top-margin css-dev-only-do-not-override-ph9edi"
            >
              <div
                class="ant-card-cover"
              >
                <img
                  alt="Profile"
                  src="https://image.tmdb.org/t/p/w500test/image"
                />
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-card-meta"
                >
                  <div
                    class="ant-card-meta-detail"
                  >
                    <div
                      class="ant-card-meta-title"
                    >
                      John Doe
                    </div>
                    <div
                      class="ant-card-meta-description"
                    >
                      Neo
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-ph9edi"
    >
      <div
        class="ant-col ant-col-10 ant-col-offset-2 top-margin css-dev-only-do-not-override-ph9edi"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-ph9edi"
        >
          Crew
        </h3>
      </div>
    </div>
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-ph9edi"
      style="margin-left: -4px; margin-right: -4px;"
    >
      <div
        class="ant-col ant-col-20 css-dev-only-do-not-override-ph9edi"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <div
          class="ant-row css-dev-only-do-not-override-ph9edi"
          style="margin-left: -16px; margin-right: -16px;"
        >
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-ph9edi"
            style="padding-left: 16px; padding-right: 16px;"
          >
            <div
              class="ant-card ant-card-bordered top-margin css-dev-only-do-not-override-ph9edi"
            >
              <div
                class="ant-card-cover"
              >
                <img
                  alt="Profile"
                  src="https://image.tmdb.org/t/p/w500test/image"
                />
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-card-meta"
                >
                  <div
                    class="ant-card-meta-detail"
                  >
                    <div
                      class="ant-card-meta-title"
                    >
                      John Doe
                    </div>
                    <div
                      class="ant-card-meta-description"
                    >
                      Director
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
